Crash switching to Sculpt mode with material using Backface Culling #75981

Closed
opened 2020-04-21 22:55:38 +02:00 by Lucas Escot · 6 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.70

Blender Version
Broken: version: 2.82 (sub 7), branch: master, commit date: 2020-03-12 05:06, hash: 375c7dc4ca
Worked: (optional)

Short description of error
When switching to sculpt mode, blender crashes instantly and unexpectedly.

Exact steps for others to reproduce the error
It has started happening on my specific file, which only contains a single object I was sculpting.
At first I thought it was vertex-count-related, but even after decimating the mesh, it still crashes.

To reproduce, simply open the .blend file, select the object, switch to sculpt mode.
I have also tried this on Blender 2.82 under Arch Linux, integrated GPU, same issue.
Same situation under Blender 2.83 beta.
untitled2.blend

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.70 **Blender Version** Broken: version: 2.82 (sub 7), branch: master, commit date: 2020-03-12 05:06, hash: `375c7dc4ca` Worked: (optional) **Short description of error** When switching to sculpt mode, blender crashes instantly and unexpectedly. **Exact steps for others to reproduce the error** It has started happening on my specific file, which only contains a single object I was sculpting. At first I thought it was vertex-count-related, but even after decimating the mesh, it still crashes. To reproduce, simply open the .blend file, select the object, switch to sculpt mode. I have also tried this on Blender 2.82 under Arch Linux, integrated GPU, same issue. Same situation under Blender 2.83 beta. [untitled2.blend](https://archive.blender.org/developer/F8488047/untitled2.blend)
Author

Added subscriber: @flupe

Added subscriber: @flupe

Added subscriber: @TheRedWaxPolice

Added subscriber: @TheRedWaxPolice

Remove the material (skin) slot...
Something weird is happening there...

Remove the material (skin) slot... Something weird is happening there...
Brecht Van Lommel changed title from Crash when switching to Sculpt mode to Crash switching to Sculpt mode with material using Backface Culling 2020-04-22 11:56:58 +02:00
Author

Thank you, it did allow me to go back to sculpt mode!
I need to investigate further why the material is causing problems though,
and I don't think that's caused by backface culling.

At some point I had two materials one the object, and one got deleted so maybe there's that.

Thank you, it did allow me to go back to sculpt mode! I need to investigate further why the material is causing problems though, and I don't think that's caused by backface culling. At some point I had two materials one the object, and one got deleted so maybe there's that.

This issue was referenced by bc83fc9c04

This issue was referenced by bc83fc9c04bef0e151518e8da299243999363799

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Brecht Van Lommel self-assigned this 2020-04-22 14:00:12 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75981
No description provided.