Fix T75981: crash in sculpt mode with mesh that used to have multiple materials

The material indices in a mesh can exceed the number of available materials
slots in the object or mesh, sculpt drawing was not taking that into account.