source/blender/draw/engines/workbench/workbench_engine.c
@@ -126,7 +126,7 @@ static void workbench_cache_sculpt_populate(WORKBENCH_PrivateData *wpd,
     for (int i = 0; i < materials_len; i++) {
       shgrps[i] = workbench_material_setup(wpd, ob, i + 1, color_type, NULL);
     }
-    DRW_shgroup_call_sculpt_with_materials(shgrps, ob, false);
+    DRW_shgroup_call_sculpt_with_materials(shgrps, materials_len, ob, false);
   }
 }
 
